# YuriWidget

./: .gitignore  CMakeLists.txt  Makefile  README.md  bin  build.sh  config.toml  exec.sh  generate_fleet_config.sh  main.sh  make.sh  style.css  test.sh  toml-c.h  yuriwidget  yuriwidget.c
.fleet/: workspace.json
client/: yuriwidget_client.c
config/: config.toml
include/: config.h  server.h  window.h
include/server/: window.h
script/: build.sh  deploy.sh  main.sh  test.sh
src/: config.c  main.c  main.py  socket_server.h  window.c  window.h  yuriwidget.c
src/client/: yuriwidget_client.c
src/include/: server.h  window.h
src/server/: args.c  args.h  config.c  log.c  log.h  main.c  server.c  socket_server.c  window.c
src/server/headers/: config.h  socket_server.h  window.h
src/server/include/: config.h  socket_server.h
src/test/: test.c
