cmake_minimum_required(VERSION 3.10)
project(myVandal C)

include_directories(/usr/include)
include_directories(/usr/include/gtk-4.0)
include_directories(/usr/include/webkitgtk-4.0)
include_directories(/usr/include/glib-2.0)
include_directories(/usr/lib/glib-2.0/include)
include_directories(/usr/include/cairo)
include_directories(/usr/include/pango-1.0)
include_directories(/usr/include/harfbuzz)
include_directories(/usr/include/gdk-pixbuf-2.0)
include_directories(/usr/include/graphene-1.0)
include_directories(/usr/lib/graphene-1.0/include)
include_directories(/usr/include/libsoup-3.0)

add_executable(myVandal src/main.c)
